# vconfig

./: LICENSE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
rust/: .gitattributes  .gitignore  Cargo.toml  README.md
rust/core/codegen/: Cargo.toml
rust/core/codegen/src/: lib.rs
rust/core/codegen/src/attribute/: rocket.rs
rust/core/codegen/src/attribute/tests/: rocket.rs
rust/core/lib/: Cargo.toml  README.md
rust/core/lib/src/: lib.rs
rust/core/lib/src/deserializer/: mod.rs
rust/core/lib/src/deserializer/types/: array.rs  array_seqaccess.rs  mod.rs  table.rs  table_map_access.rs  table_mapaccess.rs  value.rs
rust/core/lib/src/fs/: config_store.rs  mod.rs
rust/core/lib/src/parser/: error.rs  mod.rs
rust/core/lib/src/parser/tokenizer/: mod.rs  stream.rs  test.rs  token.rs
rust/core/lib/src/parser/types/: array.rs  entry.rs  mod.rs  string.rs  table.rs  value.rs
rust/core/lib/src/parser/types/tests/: array.rs  mod.rs  string.rs  table.rs  table_basic.rs  table_content.rs  table_ops.rs
rust/core/lib/src/serde/: mod.rs
rust/core/lib/src/types/: array.rs  entry.rs  error.rs  mod.rs  result.rs  table.rs  traits.rs  value.rs  variants_builder.rs
rust/core/lib/src/types/tests/: array.rs  entry.rs  mod.rs  table.rs  value.rs  variants.rs
rust/core/lib/tests/: de_array.rs  de_int_bool.rs  de_option.rs  de_struct.rs  de_table.rs  decode.rs  deserializer.rs
rust/core/web/actix_web/: Cargo.toml  README.md
rust/core/web/actix_web/src/: builder.rs  context.rs  lib.rs
rust/core/web/axum/: Cargo.toml  README.md
rust/core/web/axum/src/: builder.rs  context.rs  lib.rs
rust/core/web/codegen/: Cargo.toml
rust/core/web/codegen/src/: lib.rs
rust/core/web/codegen/src/attribute/: actix_web.rs  axum.rs  mod.rs  rocket.rs
rust/core/web/codegen/src/attribute/tests/: actix_web.rs  axum.rs  mod.rs  rocket.rs
rust/core/web/rocket/: Cargo.toml  README.md
rust/core/web/rocket/src/: builder.rs  context.rs  lib.rs
rust/docs/wiki/en/: Actix_web.md  Get_started.md  Introduction.md  Rocket.md  Types_and_config.md
rust/examples/: Cargo.toml  decode.rs  deserializer.rs
rust/examples/basic/: Cargo.toml  basic.toml
rust/examples/basic/src/: main.rs
rust/examples/web-rocket/: Cargo.toml  Rocket.toml
rust/examples/web-rocket/src/: main.rs
rust/examples/web-rocket/src/config/: index.rs
rust/examples/web-rocket/src/variants/: browser.rs  builder.rs  config.rs  fairing.rs  mod.rs
rust/examples/web/actix-web/: Cargo.toml
rust/examples/web/actix-web/src/: main.rs
rust/examples/web/actix-web/src/app_state/: mod.rs
rust/examples/web/actix-web/src/app_state/variants_processors/: browser.rs  mod.rs
rust/examples/web/actix-web/src/configs/: index.toml
rust/examples/web/actix-web/src/configs/variants_processors/: browser.rs
rust/examples/web/actix-web/src/handlers/: index.rs
rust/examples/web/axum/: Cargo.toml
rust/examples/web/axum/src/: main.rs
rust/examples/web/axum/src/app_extensions/: mod.rs
rust/examples/web/axum/src/app_extensions/variants_processors/: browser.rs  mod.rs
rust/examples/web/axum/src/configs/: index.toml
rust/examples/web/axum/src/handlers/: index.rs  mod.rs
rust/examples/web/rocket/: Cargo.toml  Rocket.toml
rust/examples/web/rocket/src/: main.rs
rust/examples/web/rocket/src/config/: index.rs
rust/examples/web/rocket/src/fairing/: mod.rs
rust/examples/web/rocket/src/fairing/variants_processors/: browser.rs  mod.rs
rust/examples/web/rocket/src/handlers/: index.rs  mod.rs
rust/examples/web/rocket/src/variants/: browser.rs  config.rs  fairing.rs  mod.rs
