[workspace]
resolver = "2"
members = [ 
  "core/lib/", 
  "core/web/actix_web", 
  "core/web/codegen",
  "core/web/rocket",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
rust_2018_idioms = "warn"
async_fn_in_trait = "allow"
refining_impl_trait = "allow"

[workspace.lints.clippy]
type_complexity = "allow"
module_inception = "allow"
multiple_bound_locations = "allow"
manual_range_contains = "allow"
