[package]
name = "variants"
version = "0.1.0"
authors = ["Wei Gu <gu_wei_dev@outlook.com>"]
edition = "2024"
description = """
A native Rust decoder of TOML-formatted like files/streams. Provides implementations of deserializing TOML-formatted like files/streams to Rust structures with variant context.
"""
keywords = ["variants", "configuration", "deserialization"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/gu-wei-x/variants"
repository = "https://github.com/gu-wei-x/variants"
rust-version = "1.88"

[dependencies]
indexmap = "2.10.0"
normpath = "1.3.0"
paste = "1.0.15"
serde = { version = "1.0.219", features = ["derive"], optional = false }
winnow = "0.7.11"
walkdir = "2.5.0"