[package]
name = "vconfig_actix_web"
version = "0.1.1"
authors = ["Wei Gu <gu_wei_dev@outlook.com>"]
edition = "2024"
description = """
A wrap crate for using vconfig in Actix Web applications. Provides implementations of deserializing TOML-formatted like files/streams to Rust structures with variant context.
"""
keywords = ["variants", "configuration", "deserialization", "web"]
license = "MIT"
homepage = "https://github.com/gu-wei-x/vconfig"
readme = "README.md"
repository = "https://github.com/gu-wei-x/vconfig"
rust-version = "1.88"
workspace = "../../../"

[dependencies]
actix-web = "4.11.0"
vconfig = { version = "0.1.1", path = "../../lib" }
vconfig_codegen = { version = "0.1.1", path = "../codegen", features = ["actix_web"] }

[lints]
workspace = true
