[package]
name = "vconfig_codegen"
version = "0.1.1"
authors = ["Wei Gu <gu_wei_dev@outlook.com>"]
edition = "2024"
description = """
Provides attribuite macros to generate code implementing FromRequest guard for deserializating TOML-formatted like TOML-formatted like files/streams to Rust data with variant context.
"""
keywords = ["variants", "web", "code", "generation"]
license = "MIT"
homepage = "https://github.com/gu-wei-x/vconfig"
repository = "https://github.com/gu-wei-x/vconfig"
rust-version = "1.88"
workspace = "../../../"

[lib]
proc-macro = true

[features]
actix_web = []
rocket = []
axum = []

[dependencies]
devise = "0.4.2"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full", "parsing"] }

[lints]
workspace = true
