[package]
name = "variants_rocket"
version = "0.1.0"
edition = "2024"
workspace = "../../../"

[dependencies]
normpath = "1.3.0"
rocket = "0.5.1"
variants = { version = "0.1.0", path = "../../lib" }
variants_codegen = { version = "0.1.0", path = "../codegen", features = ["rocket"] }

[lints]
workspace = true
