[package]
name = "variants_rocket"
version = "0.1.0"
authors = ["Wei Gu <gu_wei_dev@outlook.com>"]
edition = "2024"
description = """
A wrap crate for using variants in Rocket applications. Provides implementations of deserializing TOML-formatted like files/streams to Rust structures with variant context.
"""
keywords = ["variants", "configuration", "deserialization", "web"]
license = "MIT"
homepage = "https://github.com/gu-wei-x/variants"
readme = "README.md"
repository = "https://github.com/gu-wei-x/variants"
categories = ["web-programming::server-applications"]
rust-version = "1.88"
workspace = "../../../"

[dependencies]
normpath = "1.3.0"
rocket = "0.5.1"
variants_de = { version = "0.1.0", path = "../../lib" }
variants_codegen = { version = "0.1.0", path = "../codegen", features = ["rocket"] }

[lints]
workspace = true
