[package]
name = "vconfig_rocket"
version = "0.1.2"
authors = ["Wei Gu <gu_wei_dev@outlook.com>"]
edition = "2024"
description = """
A wrap crate for using vconfig in Rocket applications. Provides implementations of deserializing TOML-formatted like files/streams to Rust structures with variant context.
"""
keywords = ["variants", "configuration", "deserialization", "web"]
license = "MIT"
homepage = "https://github.com/gu-wei-x/vconfig"
readme = "README.md"
repository = "https://github.com/gu-wei-x/vconfig"
rust-version = "1.88"
workspace = "../../../"

[dependencies]
rocket = "0.5.1"
vconfig = { version = "0.1.2", path = "../../lib" }
vconfig_codegen = { version = "0.1.2", path = "../codegen", features = ["rocket"] }

[lints]
workspace = true
